# Taskmaster

./: .gitignore  Cargo.toml  README.md  Vagrantfile  config.yml  test.sh
.github/workflows/: rust.yml
src/: main.rs
taskmasterctl/: Cargo.toml
taskmasterctl/src/: main.rs
taskmasterd/: Cargo.toml
taskmasterd/src/: daemon.rs  job.rs  jobs.rs  listener.rs  main.rs  sleeper.rs  socket.rs
taskmasterd/src/job/: jobconfig.rs  process.rs
taskmasterd/src/job/jobconfig/: autorestart.rs  env.rs  exitcodes.rs  numprocs.rs  starttimeout.rs  stopsignal.rs  stoptimeout.rs  umask.rs  workingdir.rs
