[workspace]
members = ["taskmasterd", "taskmasterctl"]
default-members = ["taskmasterd"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
	"Tiago Lernould <tlernoul@student.42.fr>",
	"Youva Gaudé <ygaude@student.42.fr>"
]

[workspace.dependencies]
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
dirs = "4.0.0"
